--- a/index.html
+++ b/index.html
@@ -3,145 +3,111 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Photopia — 去中心化照片分享</title>
+  <title>流光相册（去中心化）</title>
   <link rel="stylesheet" href="styles.css" />
-  <meta name="theme-color" content="#111827" />
-  <!-- Gun.js CDN (核心 + SEA) -->
-  <script src="https://cdn.jsdelivr.net/npm/gun/gun.js"></script>
+  <!-- GunJS + SEA + WebRTC -->
+  <script src="https://cdn.jsdelivr.net/npm/gun/gun.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gun/sea.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gun/lib/webrtc.js"></script>
 </head>
 <body>
-  <div id="app">
-    <header class="topbar">
-      <div class="brand" onclick="goHome()">Photopia</div>
-      <div class="searchbar">
-        <input id="searchInput" placeholder="搜索关键词或用户名..." oninput="debouncedSearch()" />
-        <button onclick="doSearch()">搜索</button>
+  <header class="topbar">
+    <div class="brand">流光相册</div>
+    <div class="searchbar">
+      <input id="searchInput" placeholder="搜索关键词或用户名..." />
+      <button id="searchBtn">搜索</button>
+    </div>
+    <div class="controls">
+      <button id="themeBtn">主题</button>
+      <button id="uploadBtn">上传</button>
+      <button id="profileBtn">个人</button>
+    </div>
+  </header>
+
+  <main class="container">
+    <aside class="leftpanel">
+      <div class="card profile-card" id="profileCard">
+        <!-- 登录/注册或用户信息 -->
       </div>
-      <div class="top-actions">
-        <select id="themeSelect" onchange="changeTheme(this.value)">
-          <option value="dark">深色</option>
-          <option value="light">浅色</option>
-          <option value="white">白色</option>
-        </select>
-        <button id="btnUpload" onclick="openUpload()" title="上传照片">上传</button>
-        <div id="authArea"></div>
+
+      <div class="card stats-card" id="statsCard">
+        <h3>统计</h3>
+        <div id="statsContent">加载中...</div>
       </div>
-    </header>
 
-    <main class="container">
-      <aside class="leftpanel">
-        <div class="profile-card" id="profileCard">
-          <img id="profileAvatar" class="avatar" src="" alt="avatar" />
-          <div class="profile-info">
-            <div id="profileName">未登录</div>
-            <div id="profileBio">请登录或注册</div>
-          </div>
-          <div class="profile-stats" id="profileStats"></div>
-          <div class="profile-actions" id="profileActions"></div>
-        </div>
-
-        <div class="filters">
-          <h4>热门图片</h4>
-          <div id="hotList"></div>
-        </div>
-
-        <div class="filters">
-          <h4>统计</h4>
-          <div id="globalStats">
-            加载中...
-          </div>
-        </div>
-
-      </aside>
-
-      <section class="feed" id="feedArea">
-        <!-- feed/cards here -->
-      </section>
-
-      <aside class="rightpanel">
-        <div class="uploader-card" id="uploaderCard">
-          <h4>上传新照片</h4>
-          <input id="fileInput" type="file" accept="image/*" multiple />
-          <input id="keywordsInput" placeholder="关键词，用逗号分隔（至少一个）" />
-          <label><input type="checkbox" id="privateCheck" /> 私密（仅自己可见）</label>
-          <button onclick="doUpload()">开始上传</button>
-          <div id="uploadStatus"></div>
-        </div>
-
-        <div class="theme-preview">
-          <h4>主题预览</h4>
-          <div class="preview-box" id="previewBox"></div>
-        </div>
-      </aside>
-    </main>
-
-    <footer class="footer">
-      <div>Photopia — 去中心化照片分享 · 实时同步 · HTTPS 传输</div>
-      <div>管理员邮箱（示例）：<span id="adminEmailDisplay"></span></div>
-    </footer>
-  </div>
-
-  <!-- Image modal -->
-  <div id="imageModal" class="modal" onclick="closeModal(event)">
-    <div class="modal-content">
-      <img id="modalImage" src="" alt="大图" />
-      <div class="modal-meta">
-        <div id="modalAuthor"></div>
-        <div id="modalActions"></div>
+      <div class="card hot-card">
+        <h3>热门图片</h3>
+        <div id="hotList"></div>
       </div>
+
+      <div class="card help-card">
+        <h3>使用提示</h3>
+        <ul>
+          <li>注册：用户名+密码（也可用邮箱登录）</li>
+          <li>上传：必须填写至少一个关键词</li>
+          <li>隐藏图片：只有你能查看（加密）</li>
+          <li>喜欢/取消喜欢会实时同步</li>
+        </ul>
+      </div>
+    </aside>
+
+    <section class="feed" id="feed">
+      <!-- 照片流 -->
+    </section>
+
+    <aside class="rightpanel">
+      <div class="card upload-card" id="uploadCard" hidden>
+        <h3>上传图片</h3>
+        <input type="file" id="fileInput" accept="image/*" />
+        <input id="photoTitle" placeholder="标题 (可选)" />
+        <input id="photoKeywords" placeholder="关键词，用逗号分隔（至少一个）" />
+        <label><input type="checkbox" id="photoHidden" /> 隐藏 (只有我能看)</label>
+        <button id="doUploadBtn">上传并发布</button>
+        <button id="closeUploadBtn">关闭</button>
+        <div id="uploadStatus"></div>
+      </div>
+
+      <div class="card login-card" id="loginCard">
+        <h3>登录 / 注册</h3>
+        <input id="loginAlias" placeholder="用户名 或 邮箱" />
+        <input id="loginPass" type="password" placeholder="密码" />
+        <div class="login-actions">
+          <button id="loginBtn">登录</button>
+          <button id="registerBtn">注册</button>
+        </div>
+        <div class="login-extra">
+          <button id="logoutBtn" hidden>登出</button>
+          <button id="editProfileBtn" hidden>编辑资料</button>
+          <button id="adminDeleteBtn" title="管理员删除模式">管理员</button>
+        </div>
+        <div id="loginMsg"></div>
+      </div>
+
+      <div class="card profile-edit-card" id="profileEditCard" hidden>
+        <h3>编辑个人信息</h3>
+        <input id="editName" placeholder="显示名" />
+        <input id="editBio" placeholder="简介" />
+        <input id="editAvatarFile" type="file" accept="image/*" />
+        <button id="saveProfileBtn">保存</button>
+        <button id="cancelEditProfileBtn">取消</button>
+        <div id="profileMsg"></div>
+      </div>
+    </aside>
+  </main>
+
+  <!-- 图片查看模态 -->
+  <div id="viewer" class="viewer" hidden>
+    <div class="viewer-backdrop" id="viewerBackdrop"></div>
+    <div class="viewer-body">
+      <button id="viewerClose">×</button>
+      <img id="viewerImg" src="" alt="大图" />
+      <div id="viewerMeta"></div>
     </div>
   </div>
 
-  <!-- 登录模态 -->
-  <div id="loginModal" class="modal" onclick="modalBackgroundClick(event,'loginModal')">
-    <div class="modal-content" style="background:var(--panel);padding:16px;border-radius:10px;max-width:420px;">
-      <h3>登录</h3>
-      <div style="display:flex;flex-direction:column;gap:8px">
-        <input id="loginEmail" placeholder="邮箱（用户名）" />
-        <input id="loginPass" placeholder="密码" type="password" />
-        <div id="loginError" style="color:#f87171"></div>
-        <div style="display:flex;gap:8px;justify-content:flex-end">
-          <button onclick="closeModalById('loginModal')">取消</button>
-          <button onclick="submitLogin()">登录</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- 注册模态 -->
-  <div id="registerModal" class="modal" onclick="modalBackgroundClick(event,'registerModal')">
-    <div class="modal-content" style="background:var(--panel);padding:16px;border-radius:10px;max-width:420px;">
-      <h3>注册</h3>
-      <div style="display:flex;flex-direction:column;gap:8px">
-        <input id="regEmail" placeholder="邮箱（将作为用户名）" />
-        <input id="regPass" placeholder="密码（至少6位）" type="password" />
-        <input id="regPass2" placeholder="确认密码" type="password" />
-        <div id="regError" style="color:#f87171"></div>
-        <div style="display:flex;gap:8px;justify-content:flex-end">
-          <button onclick="closeModalById('registerModal')">取消</button>
-          <button onclick="submitRegister()">注册</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <template id="cardTpl">
-    <article class="card">
-      <div class="card-image"><img src="" alt="img" /></div>
-      <div class="card-body">
-        <div class="card-meta">
-          <div class="author" onclick="openUser(event)"><img class="small-avatar" src="" /> <span class="author-name"></span></div>
-          <div class="card-keys"></div>
-        </div>
-        <div class="card-actions">
-          <button class="like-btn">❤ <span class="like-count">0</span></button>
-          <button class="view-btn">查看</button>
-          <button class="more-btn">...</button>
-        </div>
-      </div>
-    </article>
-  </template>
+  <footer class="footer">
+    © 流光相册 · 去中心化演示 · 请使用 HTTPS 访问
+  </footer>
 
   <script src="app.js"></script>
 </body>
